		medieval washpan: +0,01 -> +0,02
		medieval surg instr: -0,02 -> -0,01
		medieval surg lamp: +0,01 -> +0,02
		industr surg instr: 0 -> 0,02
		indust lamp +0,02 -> +0,06
		spacer vitals: +0,06 -> +0,1
		spacer instruments: +0,02 -> +0,04
		spacer surg lamp: +0,04 -> + 0,08
	- added generic mass from vitals monitor of 20, for all facilites in base

- 25/12/2016

	- updated defnames from more furniture mod (in vanillachanged commentform)
	- updated Preview image

- 06/01/2017

	- fixed the worktobuild xml tag, used old worktomake, which got idebuged to instant build (work 1)

- 29/01/2017

	- added display range for surgery lights. these show the overlight radius (100% light range)

- 30/05/2017

	- changed masses from base 20 to 10 medieval, 20 industrial, 30 spacer
	- added patch folder + file that removes the old override process, should improve compatibility

- 29/12/2017

	- update to b18
	- updated about file, since patchoperations do change thing with overwriting+mod compatiblity
	- fixed roots <Defs>
	- added research tab
	- added bedrolls to patch list
	- fixed some casesensitve xml tags
	- added adv comp to spacer stuff (all slightly more expensive now)
			- removed components 5 and replaced 2 adv (rate is 4comp about 1adv)
			- 1 adv added to instruments, had no component cost

- 06/01/2018

	- added patchoperationfind mod
	- added the patches now in the main mod (makes additional patchmods obsolete
	- so far supports: [t]morebeds(both versions), goodnight, cts, rimkea
	- updated about file with note for compatibiltiy

- 07/01/2018

	- added support for mod fast regen b18
	- in vanilla patch replaced li[1] with the compclass variant

- 15/01/2018

	- added modsync

- 23/01/2018

	- added neutech to modcompatibility
	- added linkable for vanilla animal sleeping box and animal bed
	- added version number in about file

- 04/04/2018

	- added medieval times to patches, modcomp